<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user.UserFragment"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_hint"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/editNameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change_name_button"
            android:textColor="@color/white"
            android:backgroundTint="@color/green"
            app:layout_constraintTop_toBottomOf="@+id/editNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/textStatistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics_text"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/editNameButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

        <LinearLayout
            android:id="@+id/statisticsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textStatistics"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Gols -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/textGols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gols_text"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/numberGols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <!-- Assists -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/textAssists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assists_text"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/numberAssists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <!-- Blocks -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/textBlocks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blocks_text"
                    android:textSize="16sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/numberBlocks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

        <Button
        android:id="@+id/logOutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_out_button"
        android:textColor="@color/white"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>